# DeskToDo

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: windows.yaml
assets/: resources.rc
assets/appdata/: config.toml  history.toml
src/: Data.hpp  ListItem.cxx  ListItem.h  MainWindow.cxx  MainWindow.h  main.cxx
